# exproto

./: Cargo.toml  README.md  exproto.yaml
.github/workflows/: ci.yml  release.yml
src/: exproto.rs  lib.rs
src/cli/: mod.rs
src/crypto/: mod.rs
src/crypto/block/: cbc.rs
src/crypto/kdf/: middle.rs  mod.rs  obfs2.rs
src/crypto/stream/: cipher.rs  ctr.rs  mod.rs
src/engine/: config.rs  mod.rs  shutdown.rs  version.rs
src/engine/error/: crypto.rs  mod.rs  protocol.rs  transport.rs
src/mtproto/: mod.rs
src/mtproto/conn/: mod.rs  session.rs  state.rs
src/mtproto/dc/: addr.rs  cache.rs  fetch.rs  health.rs  mod.rs  resolve.rs
src/mtproto/handshake/: mod.rs  pattern.rs  upstream.rs
src/mtproto/init/: mod.rs  parse.rs  validate.rs
src/net/: mod.rs  socket.rs
src/net/accept/: dispatch.rs  limit.rs  listener.rs  mod.rs
src/net/pipe/: classic.rs  fallback.rs  middle.rs  mod.rs  tls.rs
src/rpc/: conn.rs  mod.rs
src/rpc/conn/: handshake.rs  mod.rs  reader.rs  writer.rs
src/rpc/frame/: codec.rs  crc.rs  mod.rs
src/rpc/nonce/: exchange.rs  mod.rs
src/rpc/proxy/: ans.rs  mod.rs  req.rs
src/tls/: consts.rs  mod.rs
src/tls/hello/: client.rs  mod.rs  server.rs
src/tls/record/: mod.rs  reader.rs  writer.rs
src/tls/verify/: hmac.rs
