[package]
name = "exproto"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "High-performance MTProto proxy with fake-TLS obfuscation"
license = "GPL-3.0-only"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
aes = { version = "0.8", features = ["hazmat"] }
ctr = "0.9"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hex = "0.4"
rand = "0.9"
hmac = "0.12"
crc32fast = "1"
socket2 = "0.5"
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
chrono = "0.4"

[[bin]]
name = "exproto"
path = "src/exproto.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
