[package]
name = "exproto"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
description = "Flexible high-performance MTProto proxy for Telegram"
license = "GPL-3.0-only"

[dependencies]
tokio = { version = "1.51.0", features = ["full"] }
bytes = "1.11.1"
aes = { version = "0.8.4", features = ["hazmat"] }
ctr = "0.9.2"
sha2 = "0.10.9"
sha1 = "0.10.6"
md-5 = "0.10.6"
hex = "0.4.3"
rand = "0.9.2"
hmac = "0.12.1"
crc32fast = "1.5.0"
socket2 = { version = "0.5.10", features = ["all"] }
tokio-util = "0.7.18"
reqwest = { version = "0.12.28", features = ["rustls-tls"], default-features = false }
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
thiserror = "2.0.18"
chrono = "0.4.44"
arc-swap = "1.7"
mimalloc = { version = "0.1", default-features = false }
core_affinity = "0.8"

[[bin]]
name = "exproto"
path = "src/exproto.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
